made changes related to position lag

--- a/run/localclient/meridian.ini
+++ b/run/localclient/meridian.ini
@@ -11,23 +11,26 @@ ServerHigh=100
 ServerGuest=100
 Area=1
 Animate=1
-UserName=Andrew.Kirmse
+UserName=test
 Timeout=20
 DefaultBrowser=1
 CacheBalance=70
 ObjectCacheMin=6000000
 GridCacheMin=4000000
 Sentinel=1265685224
-Browser="C:\Program Files (x86)\Internet Explorer\iexplore.exe"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
-MusicVolume=31
-SoundVolume=99
+Browser=C:\Program Files (x86)\Internet Explorer\iexplore.exe                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
+MusicVolume=49
+SoundVolume=42
+AmbientVolume=43
+TextAreaSize=20
+ActiveStatGroup=5
 
 [Window]
-Show=1
-NormalLeft=129
-NormalRight=1331
-NormalTop=251
-NormalBottom=1019
+Show=3
+NormalLeft=2083
+NormalRight=3285
+NormalTop=279
+NormalBottom=1047
 MaxX=-8
 MaxY=-8
 
@@ -71,6 +74,11 @@ Color20=56,0,0
 Color21=255,255,255
 Color22=192,192,192
 Color23=0,0,0
+Color24=171,213,222
+Color25=0,255,0
+Color26=255,0,255
+Color27=238,148,0
+Color28=255,0,0
 
 [Comm]
 ServerNumber=101
@@ -98,6 +106,7 @@ HaloColor=0
 ColorCodes=1
 Weather=0
 MapAnnotations=1
+SpinningCube=0
 
 [Aliases]
 F1=help
